// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch should match to snapshot 1`] = `
<View
  accessibilityHint="Tap to turn on"
  accessibilityLabel="Switch"
  accessibilityRole="switch"
  accessibilityState={
    {
      "busy": undefined,
      "checked": false,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      },
      false,
    ]
  }
  testID="switch"
>
  <View
    style={
      {
        "backgroundColor": "#667080",
        "borderRadius": 9999,
        "justifyContent": "center",
        "opacity": 0.5,
        "variants": {
          "disabled": {
            "true": {
              "backgroundColor": "#EEF1F4",
              "opacity": 0.5,
            },
          },
          "size": {
            "lg": {
              "height": 20,
              "width": 40,
            },
            "md": {
              "height": 16,
              "width": 32,
            },
            "sm": {
              "height": 14,
              "width": 28,
            },
          },
          "value": {
            "false": {
              "backgroundColor": "#667080",
              "opacity": 0.5,
            },
            "true": {
              "backgroundColor": "#667080",
              "opacity": 1,
            },
          },
        },
      }
    }
  >
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "#FFFFFF",
          "borderRadius": 9999,
          "transform": [
            {
              "translateX": 2,
            },
          ],
          "variants": {
            "size": {
              "lg": {
                "height": 16,
                "width": 16,
              },
              "md": {
                "height": 12,
                "width": 12,
              },
              "sm": {
                "height": 10,
                "width": 10,
              },
            },
          },
        }
      }
    />
  </View>
</View>
`;

exports[`Switch should reflect the value prop (on state) 1`] = `
<View
  accessibilityHint="Tap to turn off"
  accessibilityLabel="Switch"
  accessibilityRole="switch"
  accessibilityState={
    {
      "busy": undefined,
      "checked": true,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      },
      false,
    ]
  }
  testID="switch"
>
  <View
    style={
      {
        "backgroundColor": "#667080",
        "borderRadius": 9999,
        "justifyContent": "center",
        "opacity": 0.5,
        "variants": {
          "disabled": {
            "true": {
              "backgroundColor": "#EEF1F4",
              "opacity": 0.5,
            },
          },
          "size": {
            "lg": {
              "height": 20,
              "width": 40,
            },
            "md": {
              "height": 16,
              "width": 32,
            },
            "sm": {
              "height": 14,
              "width": 28,
            },
          },
          "value": {
            "false": {
              "backgroundColor": "#667080",
              "opacity": 0.5,
            },
            "true": {
              "backgroundColor": "#667080",
              "opacity": 1,
            },
          },
        },
      }
    }
  >
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "#FFFFFF",
          "borderRadius": 9999,
          "transform": [
            {
              "translateX": 18,
            },
          ],
          "variants": {
            "size": {
              "lg": {
                "height": 16,
                "width": 16,
              },
              "md": {
                "height": 12,
                "width": 12,
              },
              "sm": {
                "height": 10,
                "width": 10,
              },
            },
          },
        }
      }
    />
  </View>
</View>
`;
